--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,2 +1,2 @@
 * xref:index.adoc[What is Vividus]
-* xref:release-notes.adoc[What'd new in Vividus]
+* xref:release-notes.adoc[What's new in Vividus]
