--- a/docs/modules/ROOT/pages/release-notes.adoc
+++ b/docs/modules/ROOT/pages/release-notes.adoc
@@ -2,4 +2,4 @@
 
 TIP: How to get latest realease information?
 
-Navigate to: https://github.com/vividus-framework/vividus/releases
+Navigate to https://github.com/vividus-framework/vividus/releases[Release Notes Page]
